# Oracle-Integration-Price-Feed-System

./: .env.example  .gitignore  DEMO.md  Makefile  README.md  REQUIREMENTS_ANALYSIS.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TEST_RESULTS.md  docker-compose.dev.yml  docker-compose.yml  setup-dev.sh  verify-setup.sh
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/src/: main.rs  oracle_client.rs  price_aggregator.rs
backend/src/tests/: chaos_tests.rs  comprehensive_tests.rs  failover_tests.rs  integration_tests.rs  manipulation_detection_tests.rs  manipulation_tests.rs  mock_oracle_tests.rs  mod.rs  performance_tests.rs  price_parsing_tests.rs  simplified_tests.rs
config/: dev.toml
docs/: architecture.md  backend-service-documentation.md  operational-guide.md  oracle-integration.md  smart-contract-documentation.md  system-architecture.md
monitoring/: prometheus.yml
nginx/: nginx.conf
programs/oracle-integration/: Anchor.toml  Cargo.toml
programs/oracle-integration/src/: lib.rs
programs/oracle-integration/tests/: oracle-integration.ts  test_utils.rs
